--- a/index.html
+++ b/index.html
@@ -10,29 +10,12 @@
     <!--User input for geographical boundary box, find aircraft in this box using API-->
     <div id="container">
         <h1>Flight Tracker Using OpenSky</h1>
-        
-        <div class="inputBox">
-            <label>Latitude Min:</label>
-            <input type="number" id="lamin">
-        </div>
-
-        <div class="inputBox">
-            <label>Longitude Min:</label>
-            <input type="number" id="lomin">
-        </div>
-
-        <div class="inputBox">
-            <label>Latitude Max:</label>
-            <input type="number" id="lamax">
-        </div>
-
-        <div class="inputBox">
-            <label>Longitude Max:</label>
-            <input type="number" id="lomax">
-        </div>
 
         <button onclick="callAPI()">See Flights</button>
     </div>
+
+    <!--TESTING Output-->
+    <div id="flights"></div>
 
     <script src="openSky.js"></script><!--JS-->
 </body>
