Working map page with updating pins for aircraft

--- a/index.html
+++ b/index.html
@@ -11,12 +11,15 @@
     <div id="container">
         <h1>Flight Tracker Using OpenSky</h1>
 
-        <button onclick="callAPI()">See Flights</button>
+        <div id="navContainer">
+            <a id="navBtn" href="index.html">Flights</a>
+            <a id="navBtn" href="map.html">Map</a>
+        </div>
     </div>
 
     <!--TESTING Output-->
     <div id="flights"></div>
 
-    <script src="openSky.js"></script><!--JS-->
+    <script src="index.js"></script><!--JS-->
 </body>
 </html>
