Plane icons, rotation based on heading, visual map additions

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css"><!--CSS-->
 </head>
 <body>
-    <!--User input for geographical boundary box, find aircraft in this box using API-->
+    <!--Title for Page and Nav buttons-->
     <div id="container">
         <h1>Flight Tracker Using OpenSky</h1>
 
@@ -17,7 +17,7 @@
         </div>
     </div>
 
-    <!--TESTING Output-->
+    <!--Flights holds all our individual flight divs that get made in index.js-->
     <div id="flights"></div>
 
     <script src="index.js"></script><!--JS-->
